added pieces necessary for Connect site
still needs cleanup and organization

--- a/_hoa_colors.scss
+++ b/_hoa_colors.scss
@@ -16,3 +16,5 @@ $dk_gray: #333333;
 .hoa_pink_text{ color:$hoa_pink; }
 .housing_green_text{ color:$housing_green; }
 .red_text{ color: $c_red; }
+
+$base-font-color: black;
