--- a/_modal.scss
+++ b/_modal.scss
@@ -146,6 +146,9 @@ $phnx_load_img_height:		64px;
 			color:white;
 			border-bottom:solid 1px white;
 		}
+        p{
+            color:white;
+        }
 		.close{
 			color:white;
 		}
