--- a/_modal.scss
+++ b/_modal.scss
@@ -228,7 +228,7 @@ $phnx_load_img_height:		64px;
 	box-shadow:0 5px 5px rgba($c_red,0.5);
 	-webkit-animation: toperror 1000ms linear both;
   	animation: toperror 1000ms linear both;
-	li{
+	p, li{
 		text-align:center;
 		padding:1em 1em .5em 1em;
 		color:white;
