--- a/_old_bourbon_button.scss
+++ b/_old_bourbon_button.scss
@@ -128,6 +128,16 @@
   text-shadow: 0 1px 0 $text-shadow;
   background-clip: padding-box;
 
+
+
+
+    a{
+        color:$color;
+        text-decoration:none;
+    }
+
+
+
   &:hover:not(:disabled) {
     $base-color-hover:    adjust-color($base-color, $saturation: -4%, $lightness: -5%);
     $inset-shadow-hover:  adjust-color($base-color, $saturation: -7%, $lightness:  5%);
@@ -200,6 +210,13 @@
   text-align: center;
   text-decoration: none;
   text-shadow: 0 -1px 1px $text-shadow;
+
+
+    a{
+        color:$color;
+        text-decoration:none;
+    }
+
 
   &:hover:not(:disabled) {
     $first-stop-hover:  adjust-color($base-color, $red: -13, $green: -15, $blue: -18);
@@ -275,6 +292,14 @@
   text-shadow: 0 -1px 1px $text-shadow;
   background-clip: padding-box;
 
+
+  a{
+      color:$color;
+      text-decoration:none;
+  }
+
+
+
   &:hover:not(:disabled) {
     $base-color-hover:    adjust-color($base-color,                                $lightness: -4.5%);
     $border-bottom:       adjust-color($base-color, $hue:  8, $saturation:  13.5%, $lightness: -32%);
@@ -348,6 +373,13 @@
   padding: 7px 18px;
   text-decoration: none;
   background-clip: padding-box;
+
+
+  a{
+      color:$color;
+      text-decoration:none;
+  }
+
 
   &:hover:not(:disabled){
     $base-color-hover:    adjust-color($base-color, $saturation: 4%, $lightness: 5%);
