046 - SSMI - Upgraded to bourbon 5.

--- a/_hoa_site_buttons.scss
+++ b/_hoa_site_buttons.scss
@@ -17,7 +17,7 @@ div#sitebuttons{
 			padding:10px;
 			width:160px;
 			box-sizing:border-box;
-			@include transition(background-color 0.5s ease-in-out);
+			transition: background-color 0.5s ease-in-out;
 			img{
 				display:block;
 				max-height:50px;
