--- a/_typography.scss
+++ b/_typography.scss
@@ -5,6 +5,7 @@ $unitless-line-height: $base-line-height / ($base-line-height * 0 + 1); // Strip
 $header-line-height: $base-font-size * 1.25;
 $base-border-radius: 3em;
 $base-border-color: $lt_gray;
+$base-background-color: white;
 
 
 
@@ -199,4 +200,177 @@ $base-border-color: $lt_gray;
 	em{
 		font-style:italic;
 	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Questrial|Raleway:400,400i,700,700i&display=swap');
+@mixin hoa_article(){
+	$sans-serif: 'Questrial', sans-serif;
+	$serif: 'Sanchez', serif;
+	color:black;
+	text-align:left;
+	h1 {
+		// not used by editor
+	}
+	h2 {
+		color:black;
+		font-family: 'Questrial', sans-serif;
+		font-size: 2em;
+		font-weight: 700;
+		line-height: 1.25;
+		margin-bottom: 0.5rem;
+	}
+	h3 {
+		color:black;
+		font-family: 'Questrial', sans-serif;
+		font-size: 1.4rem;
+		font-weight: 400;
+		line-height: 1.25;
+		margin-bottom: 0.5rem;
+	}
+	h4 {
+		color:black;
+		font-family: 'Questrial', sans-serif;
+		font-size: 1.1rem;
+		font-weight: 700;
+		line-height: 1.25;
+		margin-bottom: 0.5rem;
+	}
+	b, strong{
+		font-weight:700;
+	}
+	i, em{
+		font-style:italic;
+	}
+	p {
+		color:black;
+		font-family: 'Raleway', sans-serif;
+		line-height: 1.5rem;
+		font-size: 1rem;
+		margin-bottom: 1.5rem;
+	}
+	ul, ol {
+		margin: 0;
+		padding: 0;
+		font-family: 'Raleway', sans-serif;
+		line-height: 1.5rem;
+		font-size: 1rem;
+		padding-left: $base-line-height;
+		margin-bottom: 1.5rem;
+	}
+	ul {
+		list-style-type: disc;
+	}
+	ol {
+		list-style-type: decimal;
+	}
+	abbr, acronym{
+		border-bottom: 1px dotted transparentize($base-font-color, .6);
+		cursor: help;
+	}
+	.type {
+		border-bottom: 1px solid;
+		display: inline-block;
+		font-family: 'Questrial', sans-serif;
+		font-size: .7rem;
+		font-weight: 800;
+		margin-bottom: 2em;
+		padding: .3em 0;
+		text-align: left;
+		text-transform: uppercase;
+	}
+
+	blockquote {
+		border-left: 2px solid #DDD;
+		color: #262626;
+		padding: 0 0 0 1rem;
+		font-style: normal;
+		margin:0 0 1.5rem 0;
+		p{
+			color:#262626;
+			&:last-of-type {
+				margin:0;
+			}
+		}
+	}
+
+	table{
+		margin-bottom:1em;
+		$table-border-color: $base-border-color;
+		$table-border: 1px solid $table-border-color;
+		$table-background: $base-background-color;
+		$table-header-background: lighten($table-background, 10);
+		$table-hover-background: darken($table-background, 2);
+		$table-stripe-background: darken($table-background, 4);
+		$table-stripe-background-hover: darken($table-stripe-background, 5);
+		$table-padding: 0.75em 1em;
+
+		border-collapse: separate;
+		border-spacing: 0;
+		width: 100%;
+
+		tbody {
+			tr:hover > td, tr:hover > th {
+				background-color: $table-hover-background;
+			}
+			tr:first-child td {
+				border-top: 2px solid $table-border-color;
+			}
+		}
+
+
+		th {
+			background-color: $table-header-background;
+			border-bottom: 0;
+			padding: $table-padding;
+			text-align: left;
+		}
+
+		tbody {
+			background-color: $table-background;
+		}
+		td {
+			border-bottom: 0;
+			border-top: 1px solid $table-border-color;
+			line-height: $base-line-height;
+			padding: $table-padding;
+		}
+	}
+
+	hgroup{
+		margin-bottom:1.5em;
+		border-bottom:1px solid transparentize($base-font-color, .6);
+		h1{
+			font-family: $serif;
+			font-size: 2rem;
+			font-weight: 700;
+			line-height: 1.25;
+			margin-bottom: 1rem;
+		}
+		h2{
+			font-family: 'Raleway', sans-serif;
+			font-style: italic;
+			font-size: 1.4rem;
+			font-weight: 400;
+			line-height: 1.25;
+			margin-bottom: 1rem;
+		}
+		div.byline{
+			color:transparentize($base-font-color, .1);
+			font-family: $sans-serif;
+			font-size:.8rem;
+			padding:0 0 1rem 0;
+		}
+	}
+
 }
